--- a/index.html
+++ b/index.html
@@ -627,8 +627,7 @@
  <!-- Slideshow Section -->
 <section id="slideshow" class="py-12 sm:py-16 lg:py-20 bg-[var(--background)]">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-<!--         <h2 class="text-2xl sm:text-3xl lg:text-4xl font-bold text-center mb-8 sm:mb-12">Explore Chicago Events</h2>
-              <div class="location-search-container"> -->
+              <div class="location-search-container">
                 <input type="text" id="location-search" placeholder="Find a location near me" aria-label="Search for storage locations">
                 <button class="btn-primary" id="search-btn">
                     <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
