--- a/index.html
+++ b/index.html
@@ -625,8 +625,11 @@
     </section>
 
  <!-- Slideshow Section -->
+<!--                         <h2 class="text-2xl sm:text-3xl lg:text-4xl font-bold text-center mb-8 sm:mb-12">Find Nearest Location</h2>
+ -->
 <section id="slideshow" class="py-12 sm:py-16 lg:py-20 bg-[var(--background)]">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+                                <h2 class="text-2xl sm:text-3xl lg:text-4xl font-bold text-center mb-8 sm:mb-12">Find Nearest Location</h2>
               <div class="location-search-container">
                 <input type="text" id="location-search" placeholder="Find a location near me" aria-label="Search for storage locations">
                 <button class="btn-primary" id="search-btn">
