--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
     <section id="home" class="hero-image min-h-[60vh] sm:min-h-[70vh] flex items-center justify-center text-center text-white">
         <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8">
             <br></br>
-            <h1 class="font-extrabold mb-4 sm:mb-6">Secure Luggage Storage in Chicago</h1>
+            <h1 class="font-extrabold mb-4 sm:mb-6">Secure Luggage Storage <br>Just Hand it to Us</br> </h1>
             <a href="/BagChk/booking.html" class="btn-primary px-3 sm:px-4 py-2 rounded-md">Book Now</a>
       
     </section>
