--- a/index.html
+++ b/index.html
@@ -788,7 +788,7 @@
     <!-- Why Choose BagChk -->
     <div class="mt-8 sm:mt-12 text-center">
         <br></br>
-        <h3 class="text-xl sm:text-2xl font-semibold mb-4">Why Choose BagChk?</h3>
+        <h3 class="text-xl sm:text-2xl font-semibold mb-4">Why Choose Bagchk?</h3>
         <br></br>
         <ul class="text-[var(--text-light)] space-y-2 max-w-2xl mx-auto" style="list-style: none; padding: 0;">
             <li>🔒 Partnered with vetted local businesses for secure storage locations</li>
@@ -810,7 +810,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div>
                 <h3 class="text-lg sm:text-xl font-semibold mb-4">Contact Information</h3>
-                <p class="text-[var(--text-light)] mb-2">Email: support@BagChk.com</p>
+                <p class="text-[var(--text-light)] mb-2">Email: support@Bagchk.com</p>
                 <p class="text-[var(--text-light)] mb-2">Phone: (312) 555-1234</p>
                 <p class="text-[var(--text-light)]">Address: 123 N Michigan Ave, Chicago, IL 60601</p>
             </div>
@@ -831,8 +831,8 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 sm:gap-8">
                 <div>
-                    <h3 class="text-base sm:text-lg font-semibold mb-4">BagChk</h3>
-                    <p class="text-[var(--text-light)]">Secure luggage storage in Chicago. <br>Just Hand It To Us.</br></p>
+                    <h3 class="text-base sm:text-lg font-semibold mb-4">Bagchk Technologies, LLC</h3>
+                    <p class="text-[var(--text-light)]">Secure luggage storage <br>Just Hand It To Us.</br></p>
                 </div>
                 <div>
                     <h3 class="text-base sm:text-lg font-semibold mb-3">Quick Links</h3>
@@ -851,7 +851,7 @@
                     </div>
                 </div>
             </div>
-            <p class="text-center text-[var(--text-light)] mt-6 sm:mt-8">© 2025 BagChk All rights reserved.</p>
+            <p class="text-center text-[var(--text-light)] mt-6 sm:mt-8">© 2025 Bagchk Technologies, LLC All rights reserved.</p>
         </div>
     </footer>
 
